Ensure that alignment of icons are retained after re-compiling
Follow-up: I0fc309f79799d2afb3d1fef989f4ea6732c48cb1
Bug: T333736

--- a/src/style/trim.scss
+++ b/src/style/trim.scss
@@ -174,7 +174,7 @@
 					transition: all 0.2s ease-in-out;
 					pointer-events: none;
 
-					> span {
+					>span {
 						display: flex;
 						cursor: pointer;
 						padding: 0.3em;
@@ -228,6 +228,7 @@
 			position: relative;
 			width: 100%;
 			margin-bottom: 2.5em;
+			align-items: center;
 
 			.timelime-controls-play,
 			.timeline-controls-delete {
@@ -326,6 +327,7 @@
 		}
 
 		.video-range-box .handle-wrapper {
+
 			.right-handle-wrapper,
 			.left-handle-wrapper {
 				width: 5px;
